@@ -4,6 +4,10 @@
 
 2008-07-20  Andre Klapper  <a9016009@gmx.de>
 
+	* C/evolution.xml: Synchronized more strings.
+
+2008-07-20  Andre Klapper  <a9016009@gmx.de>
+
 	* C/evolution.xml: Synchronized more strings, fixed a typo.
 
 2008-07-20  Andre Klapper  <a9016009@gmx.de>
